--- a/messdeck/pom.xml
+++ b/messdeck/pom.xml
@@ -78,8 +78,6 @@
 			<version>4.0.1.Final</version>
 			<classifier>tests</classifier>
 		</dependency>
-		<!-- <dependency> <groupId>org.hibernate.javax.persistence</groupId> <artifactId>hibernate-jpa-2.0-api</artifactId> 
-			<version>1.0.0.Final</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -91,7 +89,7 @@
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>1.0.0.GA</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -115,10 +113,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.10</version>
 		</dependency>
-
-		<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-core</artifactId> 
-			<version>2.4.1</version> </dependency> <dependency> <groupId>com.fasterxml.jackson.core</groupId> 
-			<artifactId>jackson-databind</artifactId> <version>2.4.1.1</version> </dependency> -->
 
 
 		<!-- Need this for json to/from object -->
@@ -154,12 +148,6 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
-
-		<!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-web</artifactId> 
-			<version>3.1.3.RELEASE</version> </dependency> <dependency> <groupId>org.springframework.security</groupId> 
-			<artifactId>spring-security-config</artifactId> <version>3.1.3.RELEASE</version> 
-			</dependency> -->
-
 
 		<!-- Testing - junit dependancy -->
 		<dependency>
@@ -203,6 +191,19 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- Oval validation support -->
+		<dependency>
+			<groupId>net.sf.oval</groupId>
+			<artifactId>oval</artifactId>
+			<version>1.31</version>
+		</dependency>
+		<!-- Javascript expression support for Oval validation -->
+		<dependency>
+			<groupId>org.mozilla</groupId>
+			<artifactId>rhino</artifactId>
+			<version>1.7.7.1</version>
 		</dependency>
 	</dependencies>
 	<build>
