started to add integration test

--- a/messdeck/pom.xml
+++ b/messdeck/pom.xml
@@ -234,6 +234,13 @@
 			<version>1.6.11</version>
 		</dependency>
 
+		<!-- Model mapper for Entity To Dto converter & vice versa -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>0.7.4</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 
