--- a/messdeck/src/main/resources/db.properties
+++ b/messdeck/src/main/resources/db.properties
@@ -5,10 +5,12 @@ db.password=Welcome@1
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=create
 hibernate.show_sql=true
+hibernate.format_sql=true
 test.db.driverClassName = com.mysql.jdbc.Driver
-test.db.url=jdbc:mysql://localhost:3306/messdecktest
+test.db.url=jdbc:mysql://localhost:3306/messdecktestdb
 test.db.userName=root
 test.db.password=Welcome@1
 test.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 test.hibernate.hbm2ddl.auto=create
 test.hibernate.show_sql=true
+test.hibernate.format_sql=true
