--- a/messdeck/pom.xml
+++ b/messdeck/pom.xml
@@ -128,6 +128,16 @@
 			<version>${jackson.version}</version>
 		</dependency>
 
+		<!-- <dependency> <groupId>com.fasterxml.jackson.datatype</groupId> <artifactId>jackson-datatype-jdk8</artifactId> 
+			<version>2.7.4</version> </dependency> -->
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+
+
 		<!-- Spring hibernate -->
 		<dependency>
 			<groupId>org.springframework</groupId>
