--- a/messdeck/pom.xml
+++ b/messdeck/pom.xml
@@ -122,6 +122,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 
@@ -141,7 +149,7 @@
 					</configuration>
 				</plugin>
 
-				<plugin>
+				<!-- <plugin>
 					<groupId>com.mysema.maven</groupId>
 					<artifactId>apt-maven-plugin</artifactId>
 					<version>1.1.2</version>
@@ -166,7 +174,7 @@
 							</configuration>
 						</execution>
 					</executions>
-				</plugin>
+				</plugin> -->
 			</plugins>
 		</pluginManagement>
 		<finalName>messdeck</finalName>
