--- a/messdeck/pom.xml
+++ b/messdeck/pom.xml
@@ -1,5 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app</groupId>
 	<artifactId>messdeck</artifactId>
@@ -130,6 +131,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-neo4j</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna-platform</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 
@@ -149,32 +168,6 @@
 					</configuration>
 				</plugin>
 
-				<!-- <plugin>
-					<groupId>com.mysema.maven</groupId>
-					<artifactId>apt-maven-plugin</artifactId>
-					<version>1.1.2</version>
-					<configuration>
-						<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>com.mysema.querydsl</groupId>
-							<artifactId>querydsl-apt</artifactId>
-							<version>${querydsl.version}</version>
-						</dependency>
-					</dependencies>
-					<executions>
-						<execution>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>process</goal>
-							</goals>
-							<configuration>
-								<outputDirectory>target/generated-sources/annotations</outputDirectory>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin> -->
 			</plugins>
 		</pluginManagement>
 		<finalName>messdeck</finalName>
