--- a/messdeck/src/main/resources/Procfile
+++ b/messdeck/src/main/resources/Procfile
@@ -1,1 +1,1 @@
-web: mvn clean package spring-boot:repackage && java -jar target/messdeck-0.0.1-SNAPSHOT.jar
+web: java -jar target/messdeck-0.0.1-SNAPSHOT.jar
