--- a/messdeck/pom.xml
+++ b/messdeck/pom.xml
@@ -31,7 +31,14 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 				</plugin>
+
+				<plugin>
+					<groupId>com.heroku.sdk</groupId>
+					<artifactId>heroku-maven-plugin</artifactId>
+					<version>1.0.3</version>
+				</plugin>
 			</plugins>
+
 		</pluginManagement>
 	</build>
 
