--- a/messdeck/src/main/resources/config/application-postgres.properties
+++ b/messdeck/src/main/resources/config/application-postgres.properties
@@ -1,9 +1,9 @@
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 ## "root" as username and password.
-spring.datasource.url = jdbc:mysql://localhost:3306/messdeck
-spring.datasource.username = root
-spring.datasource.password = Welcome@1
+spring.datasource.url = jdbc:postgresql://localhost:5432/messdeck
+spring.datasource.username = postgres
+spring.datasource.password = Welcome@6
 spring.datasource.initialize=true
 #
 ## Keep the connection alive if idle for a long time (needed in production)
@@ -23,11 +23,9 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 ## stripped before adding them to the entity manager)
 #
 ## The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Active profiles
 
 #spring.profiles.active = postgres
 #
-
-
