--- a/messdeck/src/main/resources/config/application.properties
+++ b/messdeck/src/main/resources/config/application.properties
@@ -27,7 +27,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Active profiles
 
-#spring.profiles.active = postgres
+spring.profiles.active = postgres
 #
 
 
